--- a/task-one/metadata/databases/chinook/tables/public_album.yaml
+++ b/task-one/metadata/databases/chinook/tables/public_album.yaml
@@ -1,3 +1,22 @@
 table:
   name: album
   schema: public
+array_relationships:
+  - name: tracks
+    using:
+      foreign_key_constraint_on:
+        column: album_id
+        table:
+          name: track
+          schema: public
+select_permissions:
+  - role: artist
+    permission:
+      columns:
+        - album_id
+        - title
+        - artist_id
+      filter:
+        artist_id:
+          _eq: X-Hasura-Artist-Id
+    comment: ""
