Task two containers now running

--- a/task-two/hasura/config.yaml
+++ b/task-two/hasura/config.yaml
@@ -1,6 +1,5 @@
 version: 3
-endpoint: 
-admin_secret: 
+endpoint: http://localhost:8111
 metadata_directory: metadata
 actions:
   kind: synchronous
