--- a/task-two/docker-compose.yaml
+++ b/task-two/docker-compose.yaml
@@ -12,20 +12,21 @@ services:
       - "5432:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
+      - ./postgres:/docker-entrypoint-initdb.d
     environment:
-      POSTGRES_PASSWORD: postgrespassword
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
   graphql-engine:
-    image: hasura/graphql-engine:v2.48.2-pro
+    image: hasura/graphql-engine:v2.40.2
     ports:
-      - "8111:80"
+      - "8111:8080"
     restart: always
     environment:
-      HASURA_GRAPHQL_ADMIN_SECRET: ""
-      HASURA_GRAPHQL_METADATA_DATABASE_URL: postgres://postgres:somepassword@postgresdb:5432/postgres
+      HASURA_GRAPHQL_ADMIN_SECRET: ${HASURA_GRAPHQL_ADMIN_SECRET}
+      HASURA_GRAPHQL_METADATA_DATABASE_URL: postgres://postgres:${POSTGRES_PASSWORD}@postgres:5432/postgres
       HASURA_GRAPHQL_ENABLE_CONSOLE: "false"
       HASURA_GRAPHQL_DEV_MODE: "true"
       HASURA_GRAPHQL_REDIS_URL: "redis://redis:6379"
       HASURA_GRAPHQL_RATE_LIMIT_REDIS_URL: "redis://redis:6379"
-      PG_DATABASE_URL: postgres://postgres:postgrespassword@postgres:5432/postgres
+      PG_DATABASE_URL: postgres://postgres:${POSTGRES_PASSWORD}@postgres:5432/postgres
 volumes:
   db_data:
