Fixed graphql queries in task two

--- a/task-two/hasura/metadata/databases/PG/tables/public_genres.yaml
+++ b/task-two/hasura/metadata/databases/PG/tables/public_genres.yaml
@@ -1,19 +1,19 @@
 table:
-  name: genres
+  name: genre
   schema: public
 array_relationships:
-  - name: tracks
+  - name: track
     using:
       foreign_key_constraint_on:
         column: genre_id
         table:
-          name: tracks
+          name: track
           schema: public
 select_permissions:
   - role: artist
     permission:
       columns:
         - name
-        - id
+        - genre_id
       filter: {}
     comment: ""
